# modelos-constitutivos

./: .gitignore  .readthedocs.yaml  README.md  app.py  dashrunner.py  main.py  pyproject.toml  run.py  streamlitrunner.py
docs/sphinx/source/: camclay-elastico.md  camclay-hardening.md  camclay-material.md  camclay-plastic.md  camclay.md  conf.py  elastic.md  funcoesaux.md  hardening.md  index.md  integracao.md  material.md  modelos.md  modulosbase.md  plastic.md
src/modelos/: cam_clay.py  cam_clay_elastic.py  cam_clay_hardening.py  cam_clay_plastic.py  elastic.py  funcs.py  hardening.py  integracao.py  linear_elastico.py  material.py  plastic.py  tensortypes.py
